trying to style the navbar css with opacity

--- a/src/Navbar/NavbarStyle.css
+++ b/src/Navbar/NavbarStyle.css
@@ -3,7 +3,8 @@ nav{
     align-items: center;
     justify-content: space-between;
     background: black;
-    padding: 20px 80px;
+    opacity: 0.8;
+    padding: 10px 35px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
 }
 #navbar{
