--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -5,7 +5,7 @@
     font-weight: bold;
   }
   
-  .footer-social-media {
+  .footer-business-name {
     display: flex;
     flex-direction: row;
     justify-content: center;
