--- a/src/Login/Registration.css
+++ b/src/Login/Registration.css
@@ -1,15 +1,19 @@
 @media screen and (min-width: 600px) {
     .auth-form-container {
       padding: 5rem;
-      border: 1px solid white;
+      border: 1px solid black;
       border-radius: 10px;
       margin: 0.5rem;
+      background-color: aquamarine;
+      
     }
   }
 
 .auth-form-container, .login-form, .register-form {
     display: flex;
     flex-direction: column;
+    
+    
 }
 label {
     text-align: left;
@@ -20,17 +24,20 @@ input {
     padding: 1rem;
     border: none;
     border-radius: 10px;
+    
+
 }
 button {
     border: none;
-    background-color: white;
+    width: fit-content;
+    background-color: rgb(0, 249, 203);
     padding: 20px;
     border-radius: 10px;
     cursor: pointer;
-    color: #7439db;
+    
   }
 .link-btn {
     background: none;
-    color: white;
+    color: black;
     text-decoration: underline;
 }
